[gd_scene load_steps=20 format=3 uid="uid://de1a1d3ledbwi"]

[ext_resource type="Script" path="res://entity/enemy/frog/frog.gd" id="1_i28k8"]
[ext_resource type="PackedScene" uid="uid://bd4tgln0hqfu0" path="res://c_manager/health_manager/health_manager.tscn" id="1_pvpyo"]
[ext_resource type="Script" path="res://c_manager/area_box/hit_box/hit_area.gd" id="2_clbrf"]
[ext_resource type="Script" path="res://c_manager/area_box/hurt_box/hurt_area.gd" id="3_x45du"]
[ext_resource type="Texture2D" uid="uid://b733tiubf2ap7" path="res://assets/enemy/frog/frog.png" id="4_3rvcq"]
[ext_resource type="Script" path="res://c_manager/machine_state.gd" id="4_46h4q"]
[ext_resource type="PackedScene" uid="uid://cu40ducfyqgeb" path="res://entity/enemy/ai/enemy_move_better.tscn" id="7_qkq1r"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qf54n"]
bg_color = Color(0.239216, 0.239216, 0.239216, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_chbng"]
bg_color = Color(1, 0.6, 0.6, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.313726, 0.313726, 0.313726, 1)
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1

[sub_resource type="Shader" id="Shader_0s472"]
code = "shader_type canvas_item;
uniform sampler2D SCREEN_TEXTURE :hint_screen_texture, filter_linear_mipmap;

const float pi = 3.14156;

uniform float dist = 16.;
uniform float alpha : hint_range(0., 1.) = 1.;

void fragment() {
	vec2 backgroundUV = FRAGCOORD.xy * SCREEN_PIXEL_SIZE.xy;
	
	vec2 offsetR = vec2(dist * SCREEN_PIXEL_SIZE.x * cos(TIME * 2. * pi),        dist * SCREEN_PIXEL_SIZE.x * cos(TIME*0.7 * 2. * pi));
	vec2 offsetG = vec2(dist * SCREEN_PIXEL_SIZE.x * cos(1. + (TIME * 2. * pi)), dist * SCREEN_PIXEL_SIZE.x * cos(3. + (TIME*0.7 * 2. * pi)));
	vec2 offsetB = vec2(dist * SCREEN_PIXEL_SIZE.x * cos(TIME * 1.5 * pi),       dist * SCREEN_PIXEL_SIZE.x * cos(TIME*0.9 * 2. * pi));
	
	vec4 backColR = texture(SCREEN_TEXTURE, SCREEN_UV + offsetR);
	vec4 backColG = texture(SCREEN_TEXTURE, SCREEN_UV + offsetG);
	vec4 backColB = texture(SCREEN_TEXTURE, SCREEN_UV + offsetB);
	
	vec4 texCol = texture(TEXTURE, UV);
	
	COLOR = mix(texCol, texCol.a * vec4(backColR.r, backColG.g, backColB.b, 1.0), alpha);
}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_h8g5y"]
resource_local_to_scene = true
shader = SubResource("Shader_0s472")
shader_parameter/dist = 16.0
shader_parameter/alpha = 0.0

[sub_resource type="CircleShape2D" id="CircleShape2D_drwi5"]
radius = 45.0

[sub_resource type="Animation" id="Animation_iyjq6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HurtBox/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("FrogSprite:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.001),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(3, 3)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("FrogSprite:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.001),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -30)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("FrogSprite:texture")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_3rvcq")]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("FrogSprite:hframes")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [15]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("FrogSprite:frame")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_14lrp"]
resource_name = "attack"
length = 0.5
step = 0.08
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HurtBox/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.12, 0.42),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("FrogSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.16, 0.24, 0.32, 0.4, 0.48),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [7, 8, 9, 10, 11, 12, 13, 7]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.32),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [true],
"method": &"set_jumping_mode"
}, {
"args": [false],
"method": &"set_jumping_mode"
}]
}

[sub_resource type="Animation" id="Animation_wjd46"]
resource_name = "walk"
loop_mode = 1
step = 0.15
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.075, 0.525),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [true],
"method": &"set_jumping_mode"
}, {
"args": [false],
"method": &"set_jumping_mode"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FrogSprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_3rvcq")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("FrogSprite:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [15]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("FrogSprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45, 0.6, 0.75, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("FrogSprite:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.15, 0.375, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, -55), Vector2(0, -55), Vector2(2.08165e-12, -80), Vector2(0, -55)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8ci3n"]
_data = {
"RESET": SubResource("Animation_iyjq6"),
"attack": SubResource("Animation_14lrp"),
"walk": SubResource("Animation_wjd46")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_ngf32"]
radius = 392.001

[sub_resource type="CircleShape2D" id="CircleShape2D_ydla2"]
radius = 56.4358

[sub_resource type="CircleShape2D" id="CircleShape2D_euq25"]
radius = 83.0542

[node name="Frog" type="CharacterBody2D" groups=["enemy", "frog"]]
y_sort_enabled = true
collision_layer = 2
collision_mask = 2
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_i28k8")
attack_interval = 1.4

[node name="HealthBar" parent="." node_paths=PackedStringArray("hit_box") instance=ExtResource("1_pvpyo")]
offset_left = -39.0
offset_top = -96.0
offset_right = 40.0
offset_bottom = -85.0
theme_override_styles/background = SubResource("StyleBoxFlat_qf54n")
theme_override_styles/fill = SubResource("StyleBoxFlat_chbng")
hit_box = NodePath("../HitBox")
max_health = 7

[node name="FrogSprite" type="Sprite2D" parent="."]
z_index = 1
y_sort_enabled = true
material = SubResource("ShaderMaterial_h8g5y")
position = Vector2(0, -30)
scale = Vector2(3, 3)
texture = ExtResource("4_3rvcq")
hframes = 15

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 23)
shape = SubResource("CircleShape2D_drwi5")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_8ci3n")
}
autoplay = "walk"

[node name="DetectArea" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectArea"]
shape = SubResource("CircleShape2D_ngf32")

[node name="HitBox" type="Area2D" parent="." node_paths=PackedStringArray("health_component")]
collision_layer = 0
collision_mask = 12
script = ExtResource("2_clbrf")
health_component = NodePath("../HealthBar")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(-2, 11)
shape = SubResource("CircleShape2D_ydla2")

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 0
script = ExtResource("3_x45du")
damage = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(1, 2)
shape = SubResource("CircleShape2D_euq25")
disabled = true

[node name="Timer" type="Node" parent="."]

[node name="AttackTimer" type="Timer" parent="Timer"]
wait_time = 1.5
one_shot = true

[node name="RecoverTimer" type="Timer" parent="Timer"]
wait_time = 2.0

[node name="EnemyMoveBetter" parent="." instance=ExtResource("7_qkq1r")]

[node name="machine_state" type="Node" parent="."]
script = ExtResource("4_46h4q")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[connection signal="die" from="HealthBar" to="." method="_on_health_bar_die"]
[connection signal="body_entered" from="DetectArea" to="." method="_on_detect_area_body_entered"]
[connection signal="body_exited" from="DetectArea" to="." method="_on_detect_area_body_exited"]
[connection signal="timeout" from="Timer/AttackTimer" to="." method="_on_attack_timer_timeout"]
